--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-streamlit>=1.22.0
-pandas>=1.5.0
-simpledbf>=0.1.6
-google-auth>=2.16.0
-google-api-python-client>=2.80.0
-google-cloud-bigquery>=3.5.0
-gspread-pandas>=3.3.0
-dbfread>=2.0.7
-altair>=4.2.0
-plotly>=5.13.0
-seaborn>=0.12.2
-matplotlib>=3.7.0
+streamlit
+pandas
+simpledbf
+google-auth
+google-api-python-client
+google-cloud-bigquery
+gspread-pandas
+dbfread
+altair
+plotly
+seaborn
+matplotlib
 openpyxl
